# todoapp-fastapi

./: .tool-versions  README.md  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 04b19c7c673c_add_group_model.py  645828e981e2_add_note_and_duedate_to_task.py  8197f57195c3_add_ondelete_cascade.py  8c435d265425_initial_migration.py  90e89bcc20a0_add_missing_indexes.py  99e0b907bdb4_add_list_id_to_task.py  d2d6b7c12ea4_create_list_table.py
todoapp/: main.py
todoapp/api/models/: auth.py  group.py  list.py  task.py
todoapp/api/routers/: auth.py  groups.py  lists.py  tasks.py
todoapp/database/: base.py  session.py
todoapp/models/: __init__.py  base_model.py  group.py  task.py  task_list.py  user.py
todoapp/security/: password.py  token.py
todoapp/tests/: conftest.py  test_main.py
todoapp/tests/api/routers/: conftest.py  test_auth.py  test_groups.py  test_lists.py  test_tasks.py
todoapp/tests/models/: test_group.py  test_task.py  test_task_list.py  test_user.py
todoapp/tests/security/: test_password.py
