[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "A simple TODO application"
authors = ["Vitali Tatarintev <Kalastiuz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
